# Advanced_CGI

./: CMakeLists.txt  README.md
CMake/: OpgCudaSetupHelpher.cmake  OpgCudaWrapPtxAndObjSrcs.cmake
data/exercise01_HDR/book/: crf_gt.txt  hdr_gt.exr  images.txt  output_crf.txt  robertson.exr
data/exercise03_Radiosity/: cornell_box.xml  cornell_box_fine.xml  simple0.xml  simple1.xml  simple2.xml  simple3.xml
data/exercise05_BRDFModels/: brdf_models.xml
framework_r00/src/exercise00_CUDAIntro/: CMakeLists.txt  kernels.cu  kernels.h  main.cpp
lib/: libfmt.so.10  libfmt.so.10.1.0  libglfw.so.3.3  libpugixml.so.1.11
lib/Debug/: fmtd.exp  fmtd.lib  glad.exp  glad.lib  glfw3dll.exp  nfd.lib  pugixml.exp  pugixml.lib  stb.lib  tinyexr.lib  tinyobj.lib  whereami.lib
lib/ptx/exercise00_CUDAIntro/: kernels.ptx
lib/ptx/exercise02_Raycasting/: cylinder.ptx  mesh.ptx  raycastingraygenerator.ptx  sphere.ptx
opgutil/: CMakeLists.txt  Makefile  cmake_install.cmake
opgutil/opg/: enum.h  exception.h  glmwrapper.h  imagedata.cpp  imagedata.h  opg.cpp  opg.h  opgapi.h  preprocessor.h
opgutil/opg/gui/: cameracontroller.cpp  cameracontroller.h  filescenerenderer.cpp  filescenerenderer.h  gldisplay.cpp  gldisplay.h  interactivescenerenderer.cpp  interactivescenerenderer.h  statsdisplay.cpp  statsdisplay.h  window.cpp  window.h
opgutil/opg/hostdevice/: binarysearch.h  color.h  coordinates.h  misc.h  random.h  ray.h  roots3and4.h
opgutil/opg/kernels/: kernels.cu  kernels.h  launch.h  texture.cu  texture.h
opgutil/opg/memory/: atomic.h  bufferview.h  devicebuffer.h  outputbuffer.h  packpointer.h  privateptr.h  stack.h  tensorview.h  vector.h
opgutil/opg/raytracing/: aabb.h  opg_optix_stubs.h  optixglm.h  raytracingpipeline.cpp  raytracingpipeline.h  shaderbindingtable.cpp  shaderbindingtable.h
opgutil/opg/scene/: properties.cpp  properties.h  scene.cpp  scene.h  sceneloader.cpp  sceneloader.h
opgutil/opg/scene/components/: buffercomponent.cpp  buffercomponent.h  bufferviewcomponent.cpp  bufferviewcomponent.h  camera.cpp  camera.cuh  camera.h  grid.cpp  grid.cuh  grid.h  shapeinstance.cpp  shapeinstance.cuh  shapeinstance.h
opgutil/opg/scene/components/shapes/: cube.cpp  cube.h  cylinder.cpp  cylinder.cu  cylinder.cuh  cylinder.h  mesh.cpp  mesh.cu  mesh.h  rectangle.cpp  rectangle.h  sphere.cpp  sphere.cu  sphere.h  torus.cpp  torus.cu  torus.cuh  torus.h
opgutil/opg/scene/interface/: bsdf.cuh  bsdf.h  emitter.cuh  emitter.h  medium.cuh  medium.h  phasefunction.cuh  phasefunction.h  raygenerator.h  scenecomponent.h  shape.h
opgutil/opg/scene/utility/: interaction.cuh  trace.cuh
src/: CMakeLists.txt  Makefile  cmake_install.cmake
src/exercise00_CUDAIntro/: CMakeLists.txt  kernels.cu  kernels.h  main.cpp
src/exercise01_HDR/: CMakeLists.txt  Robertson.cpp  Robertson.cu  Robertson.h  Tonemapping.cpp  Tonemapping.cu  Tonemapping.h  main.cpp
src/exercise02_Raycasting/: CMakeLists.txt  cylinder.cpp  cylinder.cu  cylinder.h  main.cpp  mesh.cpp  mesh.cu  mesh.cuh  mesh.h  raycastingraygenerator.cpp  raycastingraygenerator.cu  raycastingraygenerator.cuh  raycastingraygenerator.h  sphere.cpp  sphere.cu  sphere.cuh  sphere.h
src/exercise03_Radiosity/: radiosityemitter.cpp  radiosityemitter.cu  radiosityemitter.cuh  radiosityemitter.h  radiositykernels.cu  radiositykernels.h  radiosityraygenerator.cpp  radiosityraygenerator.cu  radiosityraygenerator.cuh  radiosityraygenerator.h
src/exercise04_WhittedRaytracing/: bsdfmodels.cpp  bsdfmodels.cu  bsdfmodels.cuh  bsdfmodels.h  lightsources.cpp  whittedraygenerator.cu  whittedraygenerator.h
src/exercise05_BRDFModels/: bsdfmodels.cpp  bsdfmodels.cu  bsdfmodels.cuh  bsdfmodels.h  lightsources.cpp  lightsources.cu  lightsources.cuh  lightsources.h  main.cpp  whittedraygenerator.cpp  whittedraygenerator.cu  whittedraygenerator.cuh
